--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
     "main": "index.js",
     "license": "MIT",
     "scripts": {
-        "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+        "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+        "typeorm": "ts-node-dev ./node_modules/typeorm/cli"
     },
     "devDependencies": {
+        "@types/bcryptjs": "^2.4.2",
         "@types/express": "^4.17.14",
+        "@types/jsonwebtoken": "^8.5.9",
         "@types/multer": "^1.4.7",
         "@types/swagger-ui-express": "^4.1.3",
         "@types/uuid": "^9.0.0",
@@ -25,10 +28,18 @@
         "typescript": "^4.9.3"
     },
     "dependencies": {
+        "bcryptjs": "^2.4.3",
         "csv-parse": "^5.3.3",
         "express": "^4.18.2",
+        "express-async-errors": "^3.1.1",
+        "jsonwebtoken": "^8.5.1",
         "multer": "^1.4.5-lts.1",
+        "pg": "^8.8.0",
+        "reflect-metadata": "^0.1.13",
         "swagger-ui-express": "^4.6.0",
-        "uuid": "^9.0.0"
+        "tsyringe": "^4.7.0",
+        "typeorm": "^0.2.45",
+        "uuid": "^9.0.0",
+        "yarn": "^1.22.19"
     }
 }
